file compress and upload

--- a/phenology-frontend/package.json
+++ b/phenology-frontend/package.json
@@ -26,6 +26,7 @@
     "font-awesome": "^4.7.0",
     "json-server-auth": "^2.1.0",
     "ngx-file-drop": "^11.3.0",
+    "ngx-image-compress": "^13.1.8",
     "rxjs": "^7.0.0",
     "tslib": "^2.0.0",
     "world-map": "0.0.9",
