--- a/phenology-backend/package.json
+++ b/phenology-backend/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "node": "^17.3.0",
+    "nodemailer": "^6.7.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
