--- a/phenology-backend/package.json
+++ b/phenology-backend/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "config": "^3.3.6",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
     "file": "^0.2.2",
     "file-extension": "^4.0.5",
+    "handlebars": "^4.7.7",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.9",
@@ -23,6 +27,7 @@
     "multer": "^1.4.4",
     "node": "^17.3.0",
     "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
     "winston": "^3.3.3"
   },
   "devDependencies": {
