--- a/phenology-frontend/package.json
+++ b/phenology-frontend/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "json-server-auth": "^2.1.0",
+    "ngx-cookie-service": "^13.1.2",
     "ngx-file-drop": "^11.3.0",
     "ngx-image-compress": "^13.1.8",
     "ngx-webcam": "^0.4.1",
