--- a/phenology-frontend/package.json
+++ b/phenology-frontend/package.json
@@ -30,6 +30,7 @@
     "ngx-cookieconsent": "^2.2.3",
     "ngx-file-drop": "^11.3.0",
     "ngx-image-compress": "^13.1.8",
+    "ngx-pagination": "^5.1.1",
     "ngx-webcam": "^0.4.1",
     "rxjs": "^7.0.0",
     "save": "^2.4.0",
