delete observations - works, logo on uploaded photos

--- a/phenology-backend/package.json
+++ b/phenology-backend/package.json
@@ -20,6 +20,7 @@
     "file-extension": "^4.0.5",
     "handlebars": "^4.7.7",
     "http-errors": "^2.0.0",
+    "jimp": "^0.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.9",
     "mongoose-id-validator": "^0.6.0",
