--- a/phenology-frontend/package.json
+++ b/phenology-frontend/package.json
@@ -22,9 +22,10 @@
     "@angular/platform-browser-dynamic": "~13.0.2",
     "@angular/router": "~13.0.2",
     "@syncfusion/ej2-angular-maps": "^19.3.53",
-    "bootstrap": "~4.6.0",
+    "bootstrap": "^4.6.0",
     "cookieconsent": "^3.1.1",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.1",
     "json-server-auth": "^2.1.0",
     "ngx-cookie-service": "^13.1.2",
     "ngx-cookieconsent": "^2.2.3",
